añadida funcionalidad a la calculadora

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 
         <div class="contenedor-botones">
             <button id="borrar-todo">AC</button>
-            <button id="borrar">C</button>
+            <button data-key = "C">C</button>
             <button id="mod">%</button>
             <button id="division">/</button>
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
+            <button data-key = "7">7</button>
+            <button data-key = "8">8</button>
+            <button data-key = "9">9</button>
             <button id="multiplicacion">*</button>
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
+            <button data-key = "4">4</button>
+            <button data-key = "5">5</button>
+            <button data-key = "6">6</button>
             <button id="suma">+</button>
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
+            <button data-key = "1">1</button>
+            <button data-key = "2">2</button>
+            <button data-key = "3">3</button>
             <button id="resta">-</button>
-            <button id="0">0</button>
+            <button data-key = "0">0</button>
             <button id="decimal">.</button>
             <button id="hidden"></button>
             <button id="igual">=</button>
