añadida implementacion de teclado y cambios varios

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         </div>
 
         <div class="contenedor-botones">
-            <button id="borrar-todo">AC</button>
-            <button data-key = "C">C</button>
-            <button id="mod">%</button>
-            <button id="division">/</button>
-            <button data-key = "7">7</button>
-            <button data-key = "8">8</button>
-            <button data-key = "9">9</button>
-            <button id="multiplicacion">*</button>
-            <button data-key = "4">4</button>
-            <button data-key = "5">5</button>
-            <button data-key = "6">6</button>
-            <button id="suma">+</button>
-            <button data-key = "1">1</button>
-            <button data-key = "2">2</button>
-            <button data-key = "3">3</button>
-            <button id="resta">-</button>
-            <button data-key = "0">0</button>
-            <button id="decimal">.</button>
-            <button id="hidden"></button>
-            <button id="igual">=</button>
+            <button data-key = "Delete" id="borrar-todo" class="key">AC</button>
+            <button data-key = "Backspace" class="key">C</button>
+            <button id="mod" class="key">%</button>
+            <button id="division" class="key">/</button>
+            <button data-key = "7" class="key">7</button>
+            <button data-key = "8" class="key">8</button>
+            <button data-key = "9" class="key">9</button>
+            <button id="multiplicacion" class="key">*</button>
+            <button data-key = "4" class="key">4</button>
+            <button data-key = "5" class="key">5</button>
+            <button data-key = "6" class="key">6</button>
+            <button data-key="+" id="suma" class="key">+</button>
+            <button data-key = "1" class="key">1</button>
+            <button data-key = "2" class="key">2</button>
+            <button data-key = "3" class="key">3</button>
+            <button data-key="-" id="resta" class="key">-</button>
+            <button data-key = "0" class="key">0</button>
+            <button data-key="." id="decimal" class="key">.</button>
+            <button id="hidden" class="key"></button>
+            <button data-key = "Enter" id="igual" class="key">=</button>
         </div>
 
         <div class="contenedor-info">
